fix: register native port capabilities dynamically